# deep-research

./: .gitignore  Dockerfile  LICENSE  README.md  USAGE_EXAMPLE.md  docker-compose.yml  example.env  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md  EXAMPLE.md
src/agent/: config.py  graph.py  prompts.py  researcher_subgraph.py  state.py  supervisor_subgraph.py  tools.py  utils.py
src/deep_research/: config.py  main.py
src/deep_research/backend/: app.py  database.py  models.py  router.py  schemas.py  service.py
src/deep_research/ml/: __init__.py  graph.py  researcher_subgraph.py  supervisor_subgraph.py  tools.py  utils.py
