[project]
name = "Deep Research Agent"
version = "0.1.0"
description = "Multiagent system designed to conduct research in various fields"
authors = [
    {name = "avolxn", email = "vlad.eldashov2303@mail.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph (>=0.5.3,<0.6.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-google-genai (>=2.1.8,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "langchain-tavily (>=0.2.11,<0.3.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
