[project]
name = "deep-research"
version = "0.1.0"
description = ""
authors = [
    {name = "avolxn",email = "vlad.eldashov2303@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "langgraph (>=0.6.8,<0.7.0)",
    "langchain-google-genai (<2.1.12)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "langchain-tavily (>=0.2.12,<0.3.0)",
    "langchain (>=0.3.27,<0.4.0)"
]

[tool.poetry]
packages = [{include = "deep_research", from = "src"}]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
ruff = "^0.14.2"
pre-commit = "^3.8.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C", "UP", "S"]
ignore = ["E501", "E741"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"